<?xml version="1.0" encoding="UTF-8"?>
<!--
  This file is part of GraphStream <http://graphstream-project.org>.
  GraphStream is a library whose purpose is to handle static or dynamic
  graph, create them from scratch, file or any source and display them.
  This program is free software distributed under the terms of two
  licenses, the CeCILL-C license that fits European law, and the GNU
  Lesser General Public License. You can use, modify and/ or
  redistribute the software under the terms of the CeCILL-C license as
  circulated by CEA, CNRS and INRIA at the following URL
  <http://www.cecill.info> or under the terms of the GNU LGPL as
  published by the Free Software Foundation, either version 3 of the
  License, or (at your option) any later version. This program is
  distributed in the hope that it will be useful, but WITHOUT ANY
  WARRANTY; without even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  License for more details. You should have received a copy of the GNU
  Lesser General Public License along with this program. If not, see
  <http://www.gnu.org/licenses/>. The fact that you are presently
  reading this means that you have had knowledge of the CeCILL-C and
  LGPL licenses and that you accept their terms.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.graphstream</groupId>
  <artifactId>gs-fx</artifactId>
  <version>2.0-TRAJAR</version>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <description>
    The GraphStream library. With GraphStream you deal with
    graphs. Static and Dynamic. You create them from scratch, from a file
    or any source. You display and render them. This is the core package
    that contains the minimal needed to read, display and write a graph.
  </description>
  <url>http://graphstream-project.org</url>

  <scm>
    <connection>scm:git:git://github.com/trajar/gs-fx.git</connection>
    <developerConnection>scm:git:git://github.com/trajar/gs-fx.git</developerConnection>
    <url>https://github.com/trajar/gs-fx</url>
  </scm>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/trajar/gs-fx/issues</url>
  </issueManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <licenses>
    <license>
      <name>LGPL3</name>
      <url>http://www.gnu.org/copyleft/lesser.html</url>
    </license>
    <license>
      <name>Cecill-C</name>
      <url>http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html
      </url>
    </license>
  </licenses>

  <dependencies>
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-core</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.graphstream</groupId>
      <artifactId>gs-algo</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jfree</groupId>
      <artifactId>fxgraphics2d</artifactId>
      <version>1.1</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.9</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>2.5.3</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <target>1.8</target>
          <source>1.8</source>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.5</version>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <!--
          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
          -->
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>